# trend-catcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  cspell.json  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: demo.sh
tests/: test_pipeline.py
trend_radar/: __init__.py  config.py  digest.py  embeddings.py  ingest.py  notify.py  pipeline.py  preferences.py  sample_data.py  store.py  trends.py  webhook.py
